# fastapi-microservices

./: .dockerignore  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml
k8s/: user-api.yaml
protos/: product.proto
services/inventory-service/: Dockerfile  main.py  pyproject.toml
services/order-service/: main.py  pyproject.toml
services/product-service/: Dockerfile  pyproject.toml
services/user-service/: Dockerfile  auth.py  db.py  main.py  models.py  product_pb2_grpc.py  pyproject.toml
